# Airnominal-old

./: .gitignore  README.md
API/: API-en.md  API-sl.md  README.md  config.yaml  config.yaml.sample  pyproject.toml  readme.md
API/Airnominal/: __init__.py  __main__.py
API/Airnominal/commands/: __init__.py  createDatabase.py
API/Airnominal/database/: __init__.py
API/Airnominal/display/: __init__.py
API/Airnominal/errors/: __init__.py  base.py  config.py  eclassroom.py  menu.py  timetable.py
API/Airnominal/utils/: __init__.py
boards/: README.md
boards/examples/pm/: Airnominal.h  Config.h  pm.ino
frontend/: package.json
frontend/public/: index.html
frontend/src/: App.vue
frontend/src/components/navigation/: ViewNavigationDesktop.vue  ViewNavigationMobile.vue
frontend/src/store/modules/: state.ts  storage.ts
frontend/src/views/: NotFound.vue  Settings.vue  Subscribe.vue
website/: .browserslistrc  .env.sample  README.md  package.json  vue.config.js
website/src/: App.vue  registerServiceWorker.ts
website/src/components/base/: Loading.vue
website/src/components/charts/: LineChart.ts
website/src/components/display/: ChartDisplay.vue  CurrentDisplay.vue  DebugDisplay.vue  MapDisplay.vue  RandomChart.vue  TextDisplay.vue
website/src/plugins/: vuetify.ts
website/src/router/: index.ts
website/src/utils/: colors.ts  date.ts  fetch.ts  getMeasurements.ts  getStations.ts  map.ts
website/src/views/: Home.vue  RegisterStation.vue  Settings.vue  StationsList.vue  StationsMap.vue  Subscribe.vue  ViewPlatform.vue  ViewStation.vue
(+8 files in other folders)
