[tool.poetry]
name = "Airnominal"
version = "0.1.0"
description = "The system of storage and display of user generated air measurements"
authors = ["Jakob Kralj in Filip Štamcar"]
license = "GPLv3"

[tool.poetry.dependencies]
python = "^3.8"
Flask = "^2.0.3"
Flask-SQLAlchemy = "^2.5.1"
SQLAlchemy = "^1.4.31"
Flask-Bcrypt = "^0.7.1"
schema = "^0.7.5"
numpy = "^1.22.3"
bcrypt = "^3.2.0"
PyYAML = "^6.0"
Werkzeug = "^2.0.3"
python-dateutil = "^2.8.2"
msgpack = "^1.0.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
